z-index problems solved

--- a/src/css/joinUs.css
+++ b/src/css/joinUs.css
@@ -3,7 +3,7 @@
 .join_us_section {
   display: block;
   position: fixed;
-  z-index: 1;
+  z-index: 99;
   left: 0;
   top: 0;
   width: 100%;
